Added Ruggero as a contributor.

--- a/pages/work-with-us.html
+++ b/pages/work-with-us.html
@@ -26,7 +26,7 @@ It is also about sharing a culture.  Over the years, we have come to value:
 
 <p><strong>Enthusiasm</strong> over drive. We do research because we are
 passionate. This means that our projects are important for us, that we
-commit to them and that we do not count our working hours.
+commit to them. It also means that we do not count our working hours.
 </p>
 
 <p><strong>Freedom</strong> over structure. This means that we take
@@ -35,22 +35,20 @@ responsibility for our actions.
 </p>
 
 <p><strong>Creativity</strong> over hard work. This means that we do our
-best to share, learn and improve continuously. It also means that get things
-done.
+best to share, learn and improve continuously. It also means that we get
+things done.
 </p>
 
-<p><strong>Team work</strong> over championship. This means that we
+<p><strong>Trust</strong> over Independence. This means that we
 continuously seek synergies with others. It also means that we have
-responsibility towards them.
+responsibilities towards them.
 </p>
 
 <h3>Expectations</h3>
+
 <p><strong>All team members</strong> are expected to seek each other's trust.
 We trust our colleagues to work well and on time. We also trust them to
 adhere to the basic principles of scientific and human good conduct.
-We show our colleagues that we are worthy of their trust by working well
-and on time, and by adhering to the basic principles of scientific and
-human good conduct.
 </p>
 
 <p><strong>Interns</strong> are expected to acquire the scientific work
@@ -75,7 +73,7 @@ to be able to do so.
 </p>
 
 <p><strong>Technicians</strong> are expected to consider themselves as a
-scientist like any other member of the team.
+scientist, like any other member of the team.
 </p>
 
 </div>
