Added motto of Catalina.

--- a/pages/people.html
+++ b/pages/people.html
@@ -103,7 +103,15 @@ others will be hopefully answer soon :-)</p>
   <tr>
   <td><div class="motto">
     <h3><strong>Catalina Romero</strong>, post-doc</h3>
-    <p>Coming soon...</p>
+    <p>For decades we have relied on a linear representation of the genome,
+    overlooking how this two-meter long polymer folds in space and fits into
+    a micron-sized nucleus. Today we know that its 3D configuration is not
+    random, but organized into a dense maze that is navigated by other
+    nuclear passengers. What are the principles that govern the
+    three-dimensional architecture of such maze? And how does genome
+    architecture contribute to gene regulation? Using live cell microscopy
+    I am investigating the interplay between genome architecture and
+    transcription factor navigation.</p>
   </div></td>
   <td class="picture"><img src="/static/images/Catalina_cropped.jpg"></td>
   </tr>
